--- a/package.json
+++ b/package.json
@@ -13,15 +13,25 @@
     "@chakra-ui/react": "^2.3.4",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@prisma/client": "^4.5.0",
     "framer-motion": "^6",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.3.1",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.38.0",
     "react-icons": "^4.4.0",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
+    "@types/cookie": "^0.5.1",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/node": "18.11.7",
+    "@types/react": "18.0.24",
     "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "prisma": "^4.5.0",
+    "typescript": "4.8.4"
   }
 }
