--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
     "react-icons": "^4.4.0",
+    "socket.io": "^4.5.3",
+    "socket.io-client": "^4.5.3",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
